@@ -2,3 +2,4 @@ Makefile
 config.cache
 config.log
 config.status
+autom4te.cache
