@@ -64,6 +64,27 @@ or improve it.
 	structures and their members will be written in an italicized
 	font, such as <em/StoreEntry/.
 
+<sect>Coding Conventions
+
+<sect1>Infrastructure
+
+	<P>
+	Most custom types and tools are documented in the code or the relevant
+	portions of this manual. Some key points apply globally however.
+
+<sect2>Fixed width types
+	<P>
+	If you need to use specific width types - such as
+	a 16 bit unsigned integer, use one of the following types. To access
+	them simply include "config.h".
+        <enum>
+	<item>int16_t   - 16 bit signed.
+	<item>u_int16_t - 16 bit unsigned.
+	<item>int32t    - 32 bit signed.
+	<item>u_int32_t - 32 bit unsigned.
+	<item>int64_t   - 64 bit signed.
+	<item>u_int64_t - 64 bit unsigned.
+	</enum>
 
 <sect>Overview of Squid Components
 
