@@ -80,12 +80,13 @@
  *   Andres Kroonmaa.
  */
 
+#include "config.h"
+
 #define FLUSH_LIMIT 1000	/* Flush memPool counters to memMeters after flush limit calls */
 #define MEM_MAX_MMAP_CHUNKS 2048
 
 #include <assert.h>
 
-#include "config.h"
 #if HAVE_STRING_H
 #include <string.h>
 #endif
