@@ -87,8 +87,8 @@ static StoreEntry *storeAufsDirAddDiskRestore(SwapDir * SD, const cache_key * ke
     time_t timestamp,
     time_t lastref,
     time_t lastmod,
-    u_num32 refcount,
-    u_short flags,
+    u_int32_t refcount,
+    u_int16_t flags,
     int clean);
 static void storeAufsDirRebuild(SwapDir * sd);
 static void storeAufsDirCloseTmpSwapLog(SwapDir * sd);
@@ -783,8 +783,8 @@ storeAufsDirAddDiskRestore(SwapDir * SD, const cache_key * key,
     time_t timestamp,
     time_t lastref,
     time_t lastmod,
-    u_num32 refcount,
-    u_short flags,
+    u_int32_t refcount,
+    u_int16_t flags,
     int clean)
 {
     StoreEntry *e = NULL;
